5/5/25:

- Create nested for loop to take columns and rows and create 2D array
- Create 3 column and 3 row constants
- Change gameBoard from {} to []

5/2/25:

- Complete step 1a, 1b
- Add giveScore function to increment playerScore as a test
- Create factory to create players along with test player
- Create factory within IIFE to create gameBoard
- Update pseudocode wording on step 1c and fix step 1 sub numbering
- Create basic container div and add temporary basic styling to see where things go
- Set default margin and padding to 0
- Create pseudocode
- Fix wrong file upload
- Resize placeholder gif
- Replace placeholder gif with one with less rapid movement
- Add project goals to README
- Create boilerplate and add placeholder gif, link css and js 
- Upload placeholder gif
- Create README, pseudocode, html, css, and js files